--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: blog
 title: Blog
 description: >
-  The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
-last_modified_at: 2018-08-03
+  The official BaloTofi blog. Life updates, portfolio content and how-to guides on how to be.
+last_modified_at: 2024-08-01
 no_link_title: false 
 no_excerpt: false 
 hide_image: false
